Fixing the top nav bar's padding + alignment vs the heading

--- a/css/styles.css
+++ b/css/styles.css
@@ -304,25 +304,24 @@ a:visited {
   h1 {
     float: left;
     font-size: 2.2rem;
-    padding: 10px 0;
-    margin-bottom: 1.2rem;
+    padding: 0 0 0 12px;
+    margin-top: 3px;
+    margin-bottom: 1rem;
     position: relative;
   }
 
   .main-header nav ul {
-    position: absolute;
-    right: -20px;
-  }
+      list-style: none;
+      width: 100%;
+      text-align: right;
+      padding-top: 18px;
+   }
 
 
   .main-nav li {
     display: inline;
-    padding: 0 4%;
+    padding: 0 0 0 4%;
     font-size: 1.2rem;
-  }
-
-  .main-nav {
-    padding: 2.8% 0;
   }
 
   #profile-img {
